<resources>
    <string name="app_name">La Guerra de las Vajillas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_userCommand_EditText">UserCommand EditText</string>
    <string name="str_userCommand_ImageButton"></string>
    <string name="str_whatDoNow_TextView">¿Qué hacemos ahora?</string>
    <string name="str_A">A</string>
    <string name="str_description">Descripción del Objeto:</string>
    <string name="str_youAreIn_TextView">Estas en:</string>
    <string name="str_locationName_TextView">Localidad</string>
    <string name="str_score_TextView">Puntuación:</string>
    <string name="str_actions_TextView">Acciones:</string>
    <string name="str_scoreValue_TextView">xx de 100</string>
    <string name="str_stars_TextView">********</string>
    <string name="str_warningLine01_TextView">ATENCION</string>
    <string name="str_warningLine02_TextView">ESTAS A PUNTO DE JUGAR UNA</string>
    <string name="str_warningLine03_TextView">AVENTURA CONVERSACIONAL.</string>
    <string name="str_warningLine04_TextView">ESTO SIGNIFICA QUE VAS A</string>
    <string name="str_warningLine05_TextView">TENER QUE LEER Y ESCRIBIR PERO</string>
    <string name="str_warningLine06_TextView">SOBRE TODO PENSAR.</string>
    <string name="str_warningLine07_TextView">PULSA LA IMAGEN PARA EMPEZAR</string>
    <string name="str_warningLine08_TextView">PARTE 1: TUTUFLEX</string>
    <string name="str_warningLine09_TextView">PARTE 2: ESTRELLA PRINGOSA</string>
    <string name="str_you_are_dead">Lo siento, pero ¡estás muerto!</string>
    <string name="str_new_game">¿Hace otra partidita?</string>
    <string name="str_blankspace_large">str_blankspace_large</string>
    <string name="str_introduce_password">Introduce la clave de acceso:</string>
    <string name="str_options_retrographics">Gráficos Originales</string>
    <string name="str_options_music">Activar Música</string>
    <string name="str_options_autosave">Salvar Automáticamente</string>
    <string name="str_endLine01_TextView">¡FELICIDADES!</string>
    <string name="str_endLine02_TextView">La princesa Paca ha sido liberada,</string>
    <string name="str_endLine03_TextView">y la Estrella Pringosa destruída.</string>
    <string name="str_endLine04_TextView">Los Rebeldes sin Causa están</string>
    <string name="str_endLine05_TextView">a salvo, pero Karapalo volverá.</string>
    <string name="str_endLine06_TextView">Z-Games.es</string>
    <string name="str_endLine07_TextView">te invita a participar en su</string>
    <string name="str_endLine08_TextView">próximo juego.</string>
    <string name="str_endLine09_TextView">DEDICADO A:</string>
    <string name="str_endLine10_TextView">Rafael Hernandez Stark</string>
    <string name="str_endLine12_TextView">Javier Cubedo</string>
    <string name="str_endLine13_TextView">Padres del Programa Original en los 80</string>
    <string name="str_endLine14_TextView">PULSA "AQUI" PARA REINICIAR</string>
</resources>