<?xml version="1.0" encoding="utf-8"?>    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"        android:id="@+id/scrollView1"        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:background="@drawable/background02" >                      <RelativeLayout            android:layout_width="fill_parent"            android:layout_height="719dp" >            <ImageView                android:id="@+id/imageView1"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_alignParentLeft="true"                android:layout_alignParentTop="true"                android:src="@drawable/fin2" />            <TextView                android:id="@+id/textView1"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/imageView1"                android:layout_centerHorizontal="true"                android:text="@string/str_stars_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView2"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView1"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine01_TextView"                android:textAppearance="?android:attr/textAppearanceMedium"                android:textColor="#FCDF2B"                android:textStyle="bold" />            <TextView                android:id="@+id/textView3"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView2"                android:layout_centerHorizontal="true"                android:layout_marginTop="10dp"                android:text="@string/str_endLine02_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView4"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView3"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine03_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView5"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView4"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine04_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView6"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView5"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine05_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/TextView16"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_alignParentBottom="true"                android:layout_alignRight="@+id/textView5"                android:layout_marginBottom="97dp"                android:text="@string/str_endLine14_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#4BD5EE"                android:textStyle="bold" />            <TextView                android:id="@+id/textView7"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView6"                android:layout_centerHorizontal="true"                android:layout_marginTop="20dp"                android:text="@string/str_endLine06_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B"                android:textStyle="bold" />            <TextView                android:id="@+id/textView8"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView7"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine07_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView9"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView8"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine08_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView10"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView9"                android:layout_centerHorizontal="true"                android:layout_marginTop="29dp"                android:text="@string/str_endLine09_TextView"                android:textAppearance="?android:attr/textAppearanceMedium"                android:textColor="#FCDF2B"                android:textStyle="bold" />            <TextView                android:id="@+id/textView11"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView10"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine10_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView12"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView11"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine12_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView13"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView12"                android:layout_centerHorizontal="true"                android:text="@string/str_endLine13_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />            <TextView                android:id="@+id/textView14"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_alignLeft="@+id/textView1"                android:layout_below="@+id/textView13"                android:layout_marginTop="35dp"                android:text="@string/str_stars_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#FCDF2B" />        </RelativeLayout>    </ScrollView>
