<?xml version="1.0" encoding="utf-8"?>    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"        android:id="@+id/scrollView1"        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:background="@drawable/background02" >        <RelativeLayout            android:layout_width="fill_parent"            android:layout_height="719dp" >            <TextView                android:id="@+id/textView1"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_alignParentTop="true"                android:layout_centerHorizontal="true"                android:layout_marginTop="26dp"                android:text="@string/str_stars_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView2"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView1"                android:layout_centerHorizontal="true"                android:text="@string/str_warningLine01_TextView"                android:textAppearance="?android:attr/textAppearanceMedium"                android:textColor="#ff0000" />            <TextView                android:id="@+id/textView3"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView2"                android:layout_centerHorizontal="true"                android:layout_marginTop="18dp"                android:text="@string/str_warningLine02_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView4"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView3"                android:layout_centerHorizontal="true"                android:text="@string/str_warningLine03_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView5"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView4"                android:layout_centerHorizontal="true"                android:text="@string/str_warningLine04_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView6"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView5"                android:layout_centerHorizontal="true"                android:text="@string/str_warningLine05_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView7"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView6"                android:layout_centerHorizontal="true"                android:text="@string/str_warningLine06_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView8"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView7"                android:layout_centerHorizontal="true"                android:layout_marginTop="16dp"                android:text="@string/str_stars_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <TextView                android:id="@+id/textView9"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView8"                android:layout_centerHorizontal="true"                android:layout_marginTop="14dp"                android:text="@string/str_warningLine07_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#00ffff" />            <TextView                android:id="@+id/textView10"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView9"                android:layout_centerHorizontal="true"                android:layout_marginTop="24dp"                android:text="@string/str_warningLine08_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <ImageButton                android:id="@+id/playPart1_ImageButton"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView10"                android:layout_centerHorizontal="true"                android:src="@drawable/ic_part1_launcher" />            <TextView                android:id="@+id/textView11"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/playPart1_ImageButton"                android:layout_centerHorizontal="true"                android:text="@string/str_warningLine09_TextView"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textColor="#ffffff" />            <ImageButton                android:id="@+id/playPart2_ImageButton"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView11"                android:layout_centerHorizontal="true"                android:src="@drawable/ic_part2_launcher" />        </RelativeLayout>    </ScrollView>
