<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <TextView
        android:id="@+id/actionsValue_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/str_scoreValue_TextView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffc90e"/>

    <TextView
        android:id="@+id/location_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_locationName_TextView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffc90e"/>

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_TextView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_separator_line" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ImageView01"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/location_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:src="@drawable/part1_location_022d" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_separator_line" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="552.34" >

            <LinearLayout
                android:id="@+id/description_LinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="20px" >

                <TextView
                    android:id="@+id/animatedLine1_TextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/animatedLine2_TextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/animatedLine3_TextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/animatedLine4_TextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/actions_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageView01"
        android:layout_toLeftOf="@+id/actionsValue_TextView"
        android:text="@string/str_actions_TextView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"/>

</RelativeLayout>